-added to all views(except authorisations ) changing font size; -in user profile and contact vc added dynamic change size of row which depended from size of font

--- a/ForgetAboutTasks/Resources/ru.lproj/Localizable.strings
+++ b/ForgetAboutTasks/Resources/ru.lproj/Localizable.strings
@@ -197,7 +197,7 @@
 "Delete Account" = "Удалить аккаунт";
 "Log Out" = "Выйти";
 "Main setups" = "Основные настройки";
-"Secondary setups" = "Допольнительные настройки";
+"Secondary setups" = "Дополнительные настройки";
 "Info" = "Информация";
 "Changing App Language" = "Изменение языка приложения";
 "Would you like to change the language of your application?" = "Вы хотели бы изменить язык вашего приложения?";
