fixed info view. did not removed infioview from superview some bug fixed next step - testing module and UI

--- a/ForgetAboutTasks/Resources/ru.lproj/Localizable.strings
+++ b/ForgetAboutTasks/Resources/ru.lproj/Localizable.strings
@@ -392,3 +392,4 @@
 "Copy link" = "Копировать";
 //User Defaults localization
 "Can't get user's image" = "Не удалось загрузить изображение";
+"You need to turn on Face ID in system settings for future use" = "Если вам необходимо включить Face ID,то зайти в системные настройки и включите вручную";
